Nangband ChangeLog - If it's not broken, let's fix it until it is.
==================

2002-07-01
----------
- Renamed the disturb_panel option to disturb_detect. It disturbs the player
  when s/he is about to leave trap detected area. (pelpel)
- Added the trap detection status indicator. (pelpel)
- Slightly shortened the speed field and moved the depth field to fit the trap
  detection field in. All the available columns are used now. Please note that
  the last column on the last line cannot be used safely on character display
  terminals. (pelpel)

2002-06-30
----------
- Fixed a bug that allowed astral players to use word of recall to
  reach the surface. (parody)

2002-06-29
----------
- Fiddled around with the cygwin and "standard" makefiles - they are
  (should be) much smaller in file size. (takkaria)
- Fixed a compiler warning in util.c. (takkaria)
- Made cave_info a u16b array (from a byte array) for pelpel to do
  some UI stuff - also changed savefile code appropriately. (takkaria)
- Fix for the Half-Troll & Elf races; they were broken.  Many thanks
  to Mogami! (takkaria)
- Added astral mode.  This allows the player to start at the bottom
  of the dungeon and work upwards.  Try playing with evil mode on! ;)
  (takkaria)

2002-06-26
----------
- Added "evil mode" to Nangband - tread lightly! :) (takkaria)
- Fixed some index errors with the options tables. (takkaria)

2002-06-16
----------
- Fixed a compiler warning and added various files to ".cvsignore"s.
  (takkaria)

2002-06-12
----------
- Merged the experimental branch into the trunk. (takkaria)
- Cleaned out hundreds of warnings all over the source. (takkaria)

2002-06-04
----------
(experimental branch)
- New running code is working. (takkaria)

(normal branch)
- Changed some file headers.  Nangband is now completely GPL'd.
  (takkaria)

2002-06-02
----------
- Updated to the latest [v] CVS; this brings some niceties.
  (takkaria)
- [v] also brought a nasty; in character dumps, objects' abilities